--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,10 @@
     "format:all": "prettier --write . && eslint . --fix",
     "fix": "prettier --write . && eslint . --fix",
     "type-check": "tsc --noEmit",
+    "test": "vitest",
+    "test:unit": "vitest run --coverage",
+    "test:watch": "vitest --ui",
+    "test:coverage": "vitest run --coverage",
     "preview": "vite preview"
   },
   "dependencies": {
